--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import "{{ site.theme }}";
 
-h4 {
+#fourth-level-heading {
     color: #777777;
     background-color: inherit;
     font-size: 14px;
